// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing GifExpertApp component should show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Friends"
      key="Friends"
    />
    <GifGrid
      category="Game of Thrones"
      key="Game of Thrones"
    />
  </ol>
</Fragment>
`;

exports[`Testing GifExpertApp component should show the GifExpertApp component correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
